// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addGitHubSettingsYml file added 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

repository:
  topics: projen-managed
"
`;

exports[`addGitHubSettingsYml override 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

repository:
  topics: projen-managed
foo: bar
"
`;
